# mpd2k

./: Cargo.toml  README.md
assets/: diagram.excalidraw
src/: dotfile.rs  error.rs  main.rs  mpd.rs
src/backend/: mod.rs
src/backend/utils/: mod.rs
src/client/: events.rs  library.rs  mod.rs  mpd.rs
src/tui/: app.rs  event_handlers.rs  events.rs  handler.rs  mod.rs  playback.rs  render.rs  types.rs
src/tui/render/: config.rs  help.rs  image.rs  mod.rs  playback.rs  tree.rs
