[package]
name = "mpd2k"
version = "0.1.0"
edition = "2021"
description = "Minimal MPD client"
author = ["Othi <mnpq.raven@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-net = "2.0.0"
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
futures-lite = "2.3.0"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
