[package]
name = "mpd2k"
version = "0.1.0"
edition = "2021"
description = "Cross-platform minimal music client with MPD support on Linux"
author = ["Othi <mnpq.raven@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-net = "2.0.0"
audiotags = "0.5.0"
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
dirs = "5.0.1"
futures-lite = "2.3.0"
ratatui = "0.25.0"
rodio = "0.17.3"
serde = { version = "1.0.198", features = ["derive"] }
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
walkdir = "2.5.0"
